--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
         --nav-bg: rgba(255, 255, 255, 0.9);
         --timeline-bg: #f8f9fa;
         --input-bg: #f5f7ff;
-        --footer-bg: #f8f9fa;
+        --footer-bg: #4a6bff;
 
 
 
@@ -153,7 +153,7 @@ section {
     display: inline-block;
     padding: 12px 30px;
     background-color: var(--primary-color);
-    color: var(--white);
+    color: #f5f5f5;
     border: none;
     border-radius: var(--border-radius);
     font-size: 1rem;
@@ -167,6 +167,7 @@ section {
 .btn:hover {
     background-color: var(--secondary-color);
     transform: translateY(-3px);
+    color: var(--text-color);
 }
 
 /* Cursor Animation */
@@ -1002,6 +1003,7 @@ section {
 .footer-logo {
     flex: 1;
     min-width: 250px;
+    color: #f5f5f5;
 }
 
 .footer-logo .logo {
@@ -1024,7 +1026,7 @@ section {
 .footer-links h3 {
     font-size: 1.2rem;
     margin-bottom: 20px;
-    color: var(--white);
+    color: #f5f5f5
 }
 
 .footer-links ul {
@@ -1054,7 +1056,7 @@ section {
 .footer-contact h3 {
     font-size: 1.2rem;
     margin-bottom: 20px;
-    color: var(--white);
+    color: #f5f5f5
 }
 
 .footer-contact ul {
@@ -1297,7 +1299,7 @@ section {
     
         .dark-theme .hero .btn:hover {
             box-shadow: 0 10px 20px rgba(108, 142, 255, 0.4);
-        }   2
+        }  
     
     .hero-subtitle {
         font-size: 1rem;
